javafx ver set to 21.0.4. LTS refactored security of db by adding .env file to gitignore and also variables, docker compose file fixed, spring boot ver set to 3.3.1 plus fixes