@@ -2,12 +2,9 @@ package hr.datastock.services;
 
 import hr.datastock.MockEntityDataValues;
 import hr.datastock.entities.RacunEntity;
-import hr.datastock.exceptions.FirmeEntityNotFoundRuntimeException;
 import hr.datastock.exceptions.RacunEntitiyNotFoundRuntimeException;
 import hr.datastock.repositories.RacunRepository;
-import hr.datastock.repositories.StavkaIzdatniceRepository;
 import hr.datastock.services.impl.RacunServiceImpl;
-import javafx.beans.binding.Bindings;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -17,7 +14,6 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -37,14 +33,17 @@ class RacunServiceTest {
     @DisplayName("RacunService get user by id")
     class RacunServiceTestGetOneById {
 
+        public static final String UNKNOWN = "unknown";
+        public static final String USER = "user";
+
         @Test
         @DisplayName("GIVEN racun record exists in database, WHEN a single racun record is fetched, THEN the racun with requested ID is returned.")
         void testLoginGetOneById() {
             final Optional<RacunEntity> expectedRacun = MockEntityDataValues.givenRacunDataRecords().stream().findFirst();
-            when(racunRepository.findById("user"))
-                    .thenReturn(expectedRacun.stream().filter(racun -> racun.getUserId().equals("user")).findFirst());
+            when(racunRepository.findById(USER))
+                    .thenReturn(expectedRacun.stream().filter(racun -> racun.getUserId().equals(USER)).findFirst());
 
-            Optional<RacunEntity> actualRacun = racunService.login("user", "user");
+            Optional<RacunEntity> actualRacun = racunService.login(USER, USER);
 
             assertAll(
                     () -> assertNotNull(actualRacun),
@@ -57,8 +56,8 @@ class RacunServiceTest {
         void testLoginGetOneByNonExistingId() {
             Class<RacunEntitiyNotFoundRuntimeException> expectedExceptionClass = RacunEntitiyNotFoundRuntimeException.class;
 
-            when(racunRepository.findById("unknown")).thenThrow(new RacunEntitiyNotFoundRuntimeException("unknown"));
-            Executable executable = () -> racunService.login("unknown","unknown");
+            when(racunRepository.findById(UNKNOWN)).thenThrow(new RacunEntitiyNotFoundRuntimeException(UNKNOWN));
+            Executable executable = () -> racunService.login(UNKNOWN, UNKNOWN);
 
             assertThrows(expectedExceptionClass, executable);
         }
@@ -70,7 +69,7 @@ class RacunServiceTest {
             @Test
             @DisplayName("GIVEN racun record exists in database, WHEN a single racun record is created, THEN new record is created and returned.")
             void testCreateAccount() {
-                final RacunEntity expectedRacun = MockEntityDataValues.givenRacunDataRecords().get(0);
+                final RacunEntity expectedRacun = MockEntityDataValues.givenRacunDataRecords().getFirst();
 
                 when(racunRepository.save(any(RacunEntity.class)))
                         .thenReturn(expectedRacun);
